--- a/mefit_android_app/android/app/src/main/AndroidManifest.xml
+++ b/mefit_android_app/android/app/src/main/AndroidManifest.xml
@@ -6,9 +6,10 @@
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-feature android:name="android.hardware.telephony" android:required="false" />
     <application
-        android:label="Health Monitor"
+        android:label="MeFit"
         android:name="${applicationName}"
-        android:icon="@mipmap/launcher_icon">
+        android:icon="@mipmap/launcher_icon"
+        android:extractNativeLibs="true">
         <activity
             android:name=".MainActivity"
             android:exported="true"
