--- a/mefit_android_app/pubspec.yaml
+++ b/mefit_android_app/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_messaging: ^11.2.6
   avatar_glow: ^2.0.2
   flutter_phone_direct_caller: ^2.1.1
+  mobile_scanner: ^2.0.0
 
 dev_dependencies:
   flutter_test:
